force-app/main/default/objects/Student__c/fields/Class_To_Student__c.field-meta.xml
<CustomField>
    <fullName>Class_To_Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Class To Student</label>
    <referenceTo>Class__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <type>Lookup</type>
</CustomField>