force-app/main/default/objects/Student__c/fields/Discount_Requested__c.field-meta.xml
<CustomField>
    <fullName>Discount_Requested__c</fullName>
    <label>Discount Requested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>