force-app/main/default/objects/Student__c/fields/Enter_Fee_Amount_to_pay__c.field-meta.xml
<CustomField>
    <fullName>Enter_Fee_Amount_to_pay__c</fullName>
    <label>Enter Fee Amount to pay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>