force-app/main/default/objects/Student__c/fields/Father_information__c.field-meta.xml
<CustomField>
    <fullName>Father_information__c</fullName>
    <formula>IF( Father_Aadhar_Number__c = Parent__r.AAdhar_Number__c , Father_Aadhar_Number__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Father information</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>