force-app/main/default/objects/Student__c/fields/Father_Job__c.field-meta.xml
<CustomField>
    <fullName>Father_Job__c</fullName>
    <label>Father Job</label>
    <length>20</length>
    <type>Text</type>
</CustomField>