force-app/main/default/objects/Student__c/fields/Fee_already_paid__c.field-meta.xml
<CustomField>
    <fullName>Fee_already_paid__c</fullName>
    <formula>Branch__r.Fee__c -  Fee_to_be_paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fee already paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>