force-app/main/default/objects/Student__c/fields/Fee_discount__c.field-meta.xml
<CustomField>
    <fullName>Fee_discount__c</fullName>
    <description>You got discount of 50%</description>
    <formula>IF( AND( Age__c &gt;22,  Age__c  &lt;25), 0.5,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fee discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>