force-app/main/default/objects/Student__c/fields/Fee_to_be_paid__c.field-meta.xml
<CustomField>
    <fullName>Fee_to_be_paid__c</fullName>
    <formula>IF( AND( Age__c &gt;22,  Age__c  &lt;25), Branch__r.Fee__c/2 - Enter_Fee_Amount_to_pay__c , Branch__r.Fee__c - Enter_Fee_Amount_to_pay__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fee to be paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>