force-app/main/default/objects/Student__c/fields/Fee_to_be_Paid_in_percent__c.field-meta.xml
<CustomField>
    <fullName>Fee_to_be_Paid_in_percent__c</fullName>
    <formula>( Branch__r.Fee__c - Fee_already_paid__c ) /  Branch__r.Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fee to be Paid(percent)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>