force-app/main/default/objects/Student__c/fields/Math__c.field-meta.xml
<CustomField>
    <fullName>Math__c</fullName>
    <label>Math</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>