force-app/main/default/objects/Student__c/fields/Mother_Aadhar_Number__c.field-meta.xml
<CustomField>
    <fullName>Mother_Aadhar_Number__c</fullName>
    <label>Mother Aadhar Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>