force-app/main/default/objects/Student__c/fields/Mother_Job__c.field-meta.xml
<CustomField>
    <fullName>Mother_Job__c</fullName>
    <label>Mother_Job</label>
    <length>20</length>
    <type>Text</type>
</CustomField>