force-app/main/default/objects/Student__c/validationRules/age_limit_example.validationRule-meta.xml
<ValidationRule>
    <fullName>age_limit_example</fullName>
    <active>true</active>
    <errorConditionFormula>Age__c &lt;20</errorConditionFormula>
    <errorMessage>Age should greater than 20</errorMessage>
</ValidationRule>