force-app/main/default/objects/Student__c/validationRules/Agevalidationcheck.validationRule-meta.xml
<ValidationRule>
    <fullName>Agevalidationcheck</fullName>
    <active>false</active>
    <errorConditionFormula>Age__c   &gt; 25</errorConditionFormula>
    <errorMessage>Age should less than 25</errorMessage>
</ValidationRule>