force-app/main/default/objects/Student__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Aadhar_Number__c</columns>
    <columns>Age__c</columns>
    <columns>Branch__c</columns>
    <columns>Discount_Requested__c</columns>
    <columns>Father_Aadhar_Number__c</columns>
    <columns>Mother_Aadhar_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>