force-app/main/default/objects/Student__c/listViews/All_Students_Info.listView-meta.xml
<ListView>
    <fullName>All_Students_Info</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>All Students Info</label>
</ListView>